vertically align tagline nav area correctly

--- a/_assets/stylesheets/mhv.scss
+++ b/_assets/stylesheets/mhv.scss
@@ -35,6 +35,12 @@ article.home div.container
       }
     }
 
+//  Nav
+
+.site-nav nav.tagline {
+  padding-top: 23px;
+  padding-bottom: 23px;
+}
 
 //  Google calendar widget
 
